--- Auto-Git Commit ---

--- a/Virtualization/QEMU/3. memory/3. 具体实现机制.md
+++ b/Virtualization/QEMU/3. memory/3. 具体实现机制.md
@@ -29,7 +29,7 @@ memory_listener_register(&kvm_memory_listener, &address_space_memory);
 memory_listener_register(&kvm_io_listener, &address_space_io);
 ```
 
-通过`memory_listener_register`函数，针对**地址空间**注册了**lisenter**,lisenter本身是**一组函数表**，当**地址空间发生变化**的时候，会调用到listener中的相应函数，从而保持**内核**和**用户空间**的**内存信息的一致性**。
+通过`memory_listener_register`函数，针对**地址空间！！！** 注册了**lisenter**,lisenter本身是**一组函数表**，当**地址空间发生变化**的时候，会调用到listener中的相应函数，从而保持**内核**和**用户空间**的**内存信息的一致性**。
 
 **虚拟机**包含有**两个地址空间**`address_space_memory`和`address_space_io`，很容易理解，正常系统也包含系统地址空间和IO地址空间。
 
@@ -153,7 +153,7 @@ void address_space_init(AddressSpace *as, MemoryRegion *root, const char *name)
 
 # 实际内存的分配
 
-前面注册listener也好，或是初始化addressspace也好，实际上均**没有对应的物理内存**。顺着main函数往下走，会调用到`machine—>init`，实际上对应于`pc_init1`函数，在该函数中有`pc_memory_init()`函数对实际的内存做了分配。我们直接从`pc_memory_init()`函数开始
+前面**注册listener**也好，或是初始化addressspace也好，实际上均**没有对应的物理内存**。顺着main函数往下走，会调用到`machine—>init`，实际上对应于`pc_init1`函数，在该函数中有`pc_memory_init()`函数对实际的内存做了分配。我们直接从`pc_memory_init()`函数开始
 
 ```cpp
 FWCfgState *pc_memory_init(MemoryRegion *system_memory,
