--- a/Virtualization/QEMU/3. memory/3. 具体实现机制.md
+++ b/Virtualization/QEMU/3. memory/3. 具体实现机制.md
@@ -31,7 +31,7 @@ memory_listener_register(&kvm_io_listener, &address_space_io);
 
 通过`memory_listener_register`函数，针对**地址空间！！！** 注册了**lisenter**,lisenter本身是**一组函数表**，当**地址空间发生变化**的时候，会调用到listener中的相应函数，从而保持**内核**和**用户空间**的**内存信息的一致性**。
 
-**虚拟机**包含有**两个地址空间**`address_space_memory`和`address_space_io`，很容易理解，正常系统也包含系统地址空间和IO地址空间。
+**虚拟机**包含有**两个地址空间**`address_space_memory`和`address_space_io`，很容易理解，正常系统也包含**系统地址空间**和**IO地址空间**。
 
 `memory_listener_register`函数不复杂，咱们看下
 
@@ -149,7 +149,9 @@ void address_space_init(AddressSpace *as, MemoryRegion *root, const char *name)
 }
 ```
 
-函数主要做了以下几个工作，设置**addressSpaceh和MR的关联**，并**初始化对应的FlatView**, 设置**其名称**。最后把`address_space_memory`加入到**全局的address_spaces链表**中，最后调用`MEMORY_LISTENER_UPDATE_REGION()`提交本次修改，这个后面做论述。回到`memory_map_init()`函数中，接下来按照同样的模式对IO区域`system_io`和IO地址空间`address_space_io`做了初始化。
+函数主要做了以下几个工作，设置**addressSpaceh和MR的关联**，并**初始化对应的FlatView**, 设置**其名称**。最后把`address_space_memory`加入到**全局的address_spaces链表**中，最后调用`MEMORY_LISTENER_UPDATE_REGION()`提交本次修改，这个后面做论述。
+
+回到`memory_map_init()`函数中，接下来按照同样的模式对IO区域`system_io`和IO地址空间`address_space_io`做了初始化。
 
 # 实际内存的分配
 
