--- Auto-Git Commit ---

--- a/Virtualization/QEMU/3. memory/3. 具体实现机制.md
+++ b/Virtualization/QEMU/3. memory/3. 具体实现机制.md
@@ -155,7 +155,11 @@ void address_space_init(AddressSpace *as, MemoryRegion *root, const char *name)
 
 # 实际内存的分配
 
-前面**注册listener**也好，或是初始化addressspace也好，实际上均**没有对应的物理内存**。顺着main函数往下走，会调用到`machine—>init`，实际上对应于`pc_init1`函数，在该函数中有`pc_memory_init()`函数对实际的内存做了分配。我们直接从`pc_memory_init()`函数开始
+前面**注册listener**也好，或是初始化addressspace也好，实际上均**没有对应的物理内存**。
+
+顺着main函数往下走，会调用到`machine—>init`，实际上对应于`pc_init1`函数，在该函数中有`pc_memory_init()`函数对实际的内存做了分配。
+
+我们直接从`pc_memory_init()`函数开始
 
 ```cpp
 FWCfgState *pc_memory_init(MemoryRegion *system_memory,
