--- Auto-Git Commit ---

--- a/Virtualization/QEMU/3. memory/2. 主要结构体分析.md
+++ b/Virtualization/QEMU/3. memory/2. 主要结构体分析.md
@@ -22,7 +22,7 @@
   - [2.7. KVMSlot:](#27-kvmslot)
   - [2.8. AddressSpace、MemoryRegion、FlatView、MemoryRegionSection与KVMslot的关系](#28-addressspace-memoryregion-flatview-memoryregionsection与kvmslot的关系)
   - [2.9. MemoryListener](#29-memorylistener)
-    - [全局链表和](#全局链表和)
+    - [全局链表和AddressSpace自己的MemoryListener](#全局链表和addressspace自己的memorylistener)
   - [2.10. AddressSpaceDispatch](#210-addressspacedispatch)
   - [2.11. memory_listeners、AddressSpace、AddressSpaceDispatch等之间的联系](#211-memory_listeners-addressspace-addressspacedispatch等之间的联系)
 - [3. 参考](#3-参考)
@@ -449,14 +449,16 @@ struct MemoryListener {
 
 为了**监控虚拟机的物理地址访问**，对于**每一个AddressSpace**，会有**一个MemoryListener**与之对应。每当`物理映射（GPA->HVA)`发生改变时，会**回调这些函数**。
 
-### 全局链表和
+### 全局链表和AddressSpace自己的MemoryListener
 
-所有的MemoryListener都会挂在**全局变量memory\_listeners链表**上。同时，AddressSpace也会有一个链表连接器自己注册的MemoryListener。
+所有的MemoryListener都会挂在**全局变量memory\_listeners链表**上。
 
 ```cpp
 static QTAILQ_HEAD(, MemoryListener) memory_listeners
     = QTAILQ_HEAD_INITIALIZER(memory_listeners);
 ```
+
+同时，AddressSpace也会有一个链表连接器自己注册的MemoryListener。
 
 ## 2.10. AddressSpaceDispatch
 
