--- a/Virtualization/QEMU/3. memory/3. 具体实现机制.md
+++ b/Virtualization/QEMU/3. memory/3. 具体实现机制.md
@@ -8,6 +8,7 @@
 - [AddressSpace的初始化](#addressspace的初始化)
 - [实际内存的分配](#实际内存的分配)
   - [分配全局RAM](#分配全局ram)
+  - [划分为两个子MR](#划分为两个子mr)
 - [](#)
 - [参考](#参考)
 
@@ -261,9 +262,19 @@ void memory_region_init_ram(MemoryRegion *mr,
 }
 ```
 
-该函数实现很简单，首先调用`memory_region_init`对**MR**做**初始化**。然后进行简单的设置，最重要的还是最后的`qemu_ram_alloc`，咱们重点看下这个函数，该函数不过是`qemu_ram_alloc_from_ptr`函数的封装，该函数围绕**RAMBlock结构**，在函数起始对**size进行页对齐**，然后**申请一个RAMBlock结构**，之后对其字段进行一些设置如指定MR 和offset，**offset**理论上需要调用`find_ram_offset`在已有的**RAMBlock**中找到一个可用的。但是此时实际上**还没有其他block**，所以这里应该**直接返回0**的。本部分最重要的莫过于**设置其host**了，其对应的**宿主机虚拟地址空间**的**虚拟地址**。在支持**大页**的情况下调用`file_ram_alloc()`函数进行分配，否则调用`phys_mem_alloc()`函数进行分配。二者分配其实都是利用**mmap**分配的，但是在支持大页的情况下需要传递参数`mem_path`,所以需要两个函数。在**非大页**的情况下，分配好内存尝试**和相邻的block合并**下。最后把block插入到全局的链表`ram_list`中，只是block保持**从大到小**的顺序。
+该函数实现很简单，首先调用`memory_region_init`对**MR**做**初始化**。然后进行简单的设置，最重要的还是最后的`qemu_ram_alloc`.
 
-经过上面的初始化，我们得到一个完整的ram，下面的`vmstate_register_ram_global`仅仅是把**MR的名字**设置到**对应的block**中。此为**全局的MR**，根据`ram_below_4g`和`ram_above_4g`，**全局的MR**被划分为两部分，形成两个子MR。memory_region_init_alias()函数便对两个子MR进行初始化，这里就不在进行内存的申请，主要是设置alias和alias_offset字段，代码如下。
+咱们重点看下这个函数，该函数不过是`qemu_ram_alloc_from_ptr`函数的封装，该函数围绕**RAMBlock结构**，在函数起始对**size进行页对齐**，然后**申请一个RAMBlock结构**，之后对其字段进行一些设置如指定MR 和offset，**offset**理论上需要调用`find_ram_offset`在已有的**RAMBlock**中找到一个可用的。但是此时实际上**还没有其他block**，所以这里应该**直接返回0**的。
+
+本部分最重要的莫过于**设置其host**了，其对应的**宿主机虚拟地址空间**的**虚拟地址**。在支持**大页**的情况下调用`file_ram_alloc()`函数进行分配，否则调用`phys_mem_alloc()`函数进行分配。二者分配其实都是利用**mmap**分配的，但是在支持大页的情况下需要传递参数`mem_path`,所以需要两个函数。
+
+在**非大页**的情况下，分配好内存尝试**和相邻的block合并**下。最后把block插入到全局的链表`ram_list`中，只是block保持**从大到小**的顺序。
+
+## 划分为两个子MR
+
+经过上面的初始化，我们得到一个完整的ram，下面的`vmstate_register_ram_global`仅仅是把**MR的名字**设置到**对应的block**中。此为**全局的MR**，根据`ram_below_4g`和`ram_above_4g`，**全局的MR**被划分为两部分，形成**两个子MR**。
+
+`memory_region_init_alias()`函数便对两个子MR进行初始化，这里就**不再进行内存的申请**，主要是设置`alias`和`alias_offset`字段，代码如下。
 
 ```cpp
 void memory_region_init_alias(MemoryRegion *mr,
