--- Auto-Git Commit ---

--- a/Virtualization/QEMU/3. memory/3. 具体实现机制.md
+++ b/Virtualization/QEMU/3. memory/3. 具体实现机制.md
@@ -233,6 +233,146 @@ FWCfgState *pc_memory_init(MemoryRegion *system_memory,
     guest_info->fw_cfg = fw_cfg;
     return fw_cfg;
 }
+
+void pc_memory_init(PCMachineState *pcms,
+                    MemoryRegion *system_memory,
+                    MemoryRegion *rom_memory,
+                    MemoryRegion **ram_memory)
+{
+    int linux_boot, i;
+    MemoryRegion *ram, *option_rom_mr;
+    MemoryRegion *ram_below_4g, *ram_above_4g;
+    FWCfgState *fw_cfg;
+    MachineState *machine = MACHINE(pcms);
+    MachineClass *mc = MACHINE_GET_CLASS(machine);
+    PCMachineClass *pcmc = PC_MACHINE_GET_CLASS(pcms);
+    X86MachineState *x86ms = X86_MACHINE(pcms);
+
+    assert(machine->ram_size == x86ms->below_4g_mem_size +
+                                x86ms->above_4g_mem_size);
+
+    linux_boot = (machine->kernel_filename != NULL);
+
+    /* Allocate RAM.  We allocate it as a single memory region and use
+     * aliases to address portions of it, mostly for backwards compatibility
+     * with older qemus that used qemu_ram_alloc().
+     */
+    ram = g_malloc(sizeof(*ram));
+    /* 根据虚拟机内存大小分配*/
+    memory_region_allocate_system_memory(ram, NULL, "pc.ram",
+                                         machine->ram_size);
+    *ram_memory = ram;
+    ram_below_4g = g_malloc(sizeof(*ram_below_4g));
+    memory_region_init_alias(ram_below_4g, NULL, "ram-below-4g", ram,
+                             0, x86ms->below_4g_mem_size);
+    memory_region_add_subregion(system_memory, 0, ram_below_4g);
+    e820_add_entry(0, x86ms->below_4g_mem_size, E820_RAM);
+    if (x86ms->above_4g_mem_size > 0) {
+        ram_above_4g = g_malloc(sizeof(*ram_above_4g));
+        memory_region_init_alias(ram_above_4g, NULL, "ram-above-4g", ram,
+                                 x86ms->below_4g_mem_size,
+                                 x86ms->above_4g_mem_size);
+        memory_region_add_subregion(system_memory, 0x100000000ULL,
+                                    ram_above_4g);
+        e820_add_entry(0x100000000ULL, x86ms->above_4g_mem_size, E820_RAM);
+    }
+
+    if (!pcmc->has_reserved_memory &&
+        (machine->ram_slots ||
+         (machine->maxram_size > machine->ram_size))) {
+
+        error_report("\"-memory 'slots|maxmem'\" is not supported by: %s",
+                     mc->name);
+        exit(EXIT_FAILURE);
+    }
+    /* always allocate the device memory information */
+    machine->device_memory = g_malloc0(sizeof(*machine->device_memory));
+
+    /* initialize device memory address space */
+    if (pcmc->has_reserved_memory &&
+        (machine->ram_size < machine->maxram_size)) {
+        ram_addr_t device_mem_size = machine->maxram_size - machine->ram_size;
+
+        if (machine->ram_slots > ACPI_MAX_RAM_SLOTS) {
+            error_report("unsupported amount of memory slots: %"PRIu64,
+                         machine->ram_slots);
+            exit(EXIT_FAILURE);
+        }
+
+        if (QEMU_ALIGN_UP(machine->maxram_size,
+                          TARGET_PAGE_SIZE) != machine->maxram_size) {
+            error_report("maximum memory size must by aligned to multiple of "
+                         "%d bytes", TARGET_PAGE_SIZE);
+            exit(EXIT_FAILURE);
+        }
+
+        machine->device_memory->base =
+            ROUND_UP(0x100000000ULL + x86ms->above_4g_mem_size, 1 * GiB);
+
+        if (pcmc->enforce_aligned_dimm) {
+            /* size device region assuming 1G page max alignment per slot */
+            device_mem_size += (1 * GiB) * machine->ram_slots;
+        }
+
+        if ((machine->device_memory->base + device_mem_size) <
+            device_mem_size) {
+            error_report("unsupported amount of maximum memory: " RAM_ADDR_FMT,
+                         machine->maxram_size);
+            exit(EXIT_FAILURE);
+        }
+
+        memory_region_init(&machine->device_memory->mr, OBJECT(pcms),
+                           "device-memory", device_mem_size);
+        memory_region_add_subregion(system_memory, machine->device_memory->base,
+                                    &machine->device_memory->mr);
+    }
+    /* Initialize PC system firmware */
+    pc_system_firmware_init(pcms, rom_memory);
+
+    option_rom_mr = g_malloc(sizeof(*option_rom_mr));
+    memory_region_init_ram(option_rom_mr, NULL, "pc.rom", PC_ROM_SIZE,
+                           &error_fatal);
+    if (pcmc->pci_enabled) {
+        memory_region_set_readonly(option_rom_mr, true);
+    }
+    memory_region_add_subregion_overlap(rom_memory,
+                                        PC_ROM_MIN_VGA,
+                                        option_rom_mr,
+                                        1);
+
+    fw_cfg = fw_cfg_arch_create(machine,
+                                x86ms->boot_cpus, x86ms->apic_id_limit);
+
+    rom_set_fw(fw_cfg);
+
+    if (pcmc->has_reserved_memory && machine->device_memory->base) {
+        uint64_t *val = g_malloc(sizeof(*val));
+        PCMachineClass *pcmc = PC_MACHINE_GET_CLASS(pcms);
+        uint64_t res_mem_end = machine->device_memory->base;
+
+        if (!pcmc->broken_reserved_end) {
+            res_mem_end += memory_region_size(&machine->device_memory->mr);
+        }
+        *val = cpu_to_le64(ROUND_UP(res_mem_end, 1 * GiB));
+        fw_cfg_add_file(fw_cfg, "etc/reserved-memory-end", val, sizeof(*val));
+    }
+
+    if (linux_boot) {
+        x86_load_linux(x86ms, fw_cfg, pcmc->acpi_data_size,
+                       pcmc->pvh_enabled, pcmc->linuxboot_dma_enabled);
+    }
+
+    for (i = 0; i < nb_option_roms; i++) {
+        rom_add_option(option_rom[i].name, option_rom[i].bootindex);
+    }
+    x86ms->fw_cfg = fw_cfg;
+
+    /* Init default IOAPIC address space */
+    x86ms->ioapic_as = &address_space_memory;
+
+    /* Init ACPI memory hotplug IO base address */
+    pcms->memhp_io_base = ACPI_MEMORY_HOTPLUG_BASE;
+}
 ```
 
 从总体上来讲，该函数主要完成了三个工作：
@@ -292,7 +432,11 @@ void memory_region_init_alias(MemoryRegion *mr,
 }
 ```
 
-在初始化完毕，需要调用memory_region_add_subregion()函数把子MR注册到全局的system_memory。该函数实现是比较简单的，但是需要重点介绍下，因为这里执行了关键的更新操作。函数核心交给memory_region_add_subregion_common()函数实现，该函数同样比较简单，设置subregion->parent和system_memory的关联，设置其addr字段为offset，即在全局MR中的偏移。然后就按照优先级顺序吧subregion插入到system_memory的subregions链表中，这些都比较简单，目前我们添加了区域，地址空间已经发生变化，自然要把变化和KVM进行同步，这一工作由memory_region_transaction_commit()实现。
+在初始化完毕，需要调用`memory_region_add_subregion()`函数把**子MR**注册到**全局的system_memory**。该函数实现是比较简单的，但是需要重点介绍下，因为这里执行了关键的更新操作。
+
+函数核心交给`memory_region_add_subregion_common()`函数实现，该函数同样比较简单，设置`subregion->parent`和`system_memory`的关联，设置**其addr字段**为offset，即在**全局MR中的偏移**。然后就按照**优先级顺序**把**subregion**插入到`system_memory`的**subregions链表**中，这些都比较简单.
+
+目前我们添加了区域，**地址空间已经发生变化**，自然要把变化和KVM进行同步，这一工作由`memory_region_transaction_commit()`实现。
 
 ```cpp
 void memory_region_transaction_commit(void)
