--- a/Virtualization/QEMU/3. memory/3. 具体实现机制.md
+++ b/Virtualization/QEMU/3. memory/3. 具体实现机制.md
@@ -5,8 +5,8 @@
 
 - [整体概述](#整体概述)
 - [回调函数的注册](#回调函数的注册)
-- [AddressSpace的初始化](#addressspace的初始化)
-- [实际内存的分配](#实际内存的分配)
+- [全局的系统AS和MR的初始化: 不分配GPA/HVA](#全局的系统as和mr的初始化-不分配gpahva)
+- [实际内存的分配GPA/HVA](#实际内存的分配gpahva)
   - [分配全局RAM](#分配全局ram)
   - [划分为两个子MR](#划分为两个子mr)
 - [](#)
@@ -78,7 +78,7 @@ static QTAILQ_HEAD(, MemoryListener) memory_listeners
 
 在函数最后还针对**每个address_space**，调用`listener_add_address_space`函数，该函数对其对应的`address_space`管理的**flatrange**向**KVM注册**。当然，实际上**此时address_space**尚未经过初始化，所以这里的循环其实是**空循环**。
 
-# AddressSpace的初始化
+# 全局的系统AS和MR的初始化: 不分配GPA/HVA
 
 涉及函数：`cpu_exec_init_all() memory_map_init()` 
 
@@ -155,7 +155,9 @@ void address_space_init(AddressSpace *as, MemoryRegion *root, const char *name)
 
 回到`memory_map_init()`函数中，接下来按照同样的模式对IO区域`system_io`和IO地址空间`address_space_io`做了初始化。
 
-# 实际内存的分配
+针对系统内核、系统IO的MR和AS的初始化， 但是并不分配GPA/HVA, MR和AS都是全局的
+
+# 实际内存的分配GPA/HVA
 
 前面**注册listener**也好，或是初始化addressspace也好，实际上均**没有对应的物理内存**。
 
@@ -258,7 +260,7 @@ void pc_memory_init(PCMachineState *pcms,
      * with older qemus that used qemu_ram_alloc().
      */
     ram = g_malloc(sizeof(*ram));
-    /* 根据虚拟机内存大小分配*/
+    /* 根据虚拟机内存大小分配MR */
     memory_region_allocate_system_memory(ram, NULL, "pc.ram",
                                          machine->ram_size);
     *ram_memory = ram;
