--- Auto-Git Commit ---

--- a/Virtualization/KVM/2. 模块初始化以及创建虚拟机QEMU/2. QEMU初始化.md
+++ b/Virtualization/KVM/2. 模块初始化以及创建虚拟机QEMU/2. QEMU初始化.md
@@ -153,8 +153,10 @@ int main()
  |           |
  |           ├─ kvmclock_create()
  |           ├─ pc_memory_init() // 【4】内存初始化，从 QEMU 进程的地址空间中进行实际的内存分配
- |           |   ├─ memory_region_init_ram() // 创建 pc.ram, pc.rom 并分配内存
- |           |   |   ├─ memory_region_init()
+ |           |   ├─ memory_region_allocate_system_memory() // 创建 pc.ram, pc.rom 并分配内存
+ |           |   |   ├─ allocate_system_memory_nonnuma()
+ |           |   |   |   |─ memory_region_init_ram_nomigrate()
+ |           |   |   |   └─ vmstate_register_ram_global() // 将 MR 的 name 写入 RAMBlock 的 idstr
  |           |   |   └─ qemu_ram_alloc()
  |           |   |       └─ qemu_ram_alloc_from_ptr()
  |           |   |
