--- Auto-Git Commit ---

--- a/Virtualization/KVM/2. 模块初始化以及创建虚拟机QEMU/2. QEMU初始化.md
+++ b/Virtualization/KVM/2. 模块初始化以及创建虚拟机QEMU/2. QEMU初始化.md
@@ -153,9 +153,12 @@ int main()
  |           |
  |           ├─ kvmclock_create()
  |           ├─ pc_memory_init() // 【4】内存初始化，从 QEMU 进程的地址空间中进行实际的内存分配
- |           |   ├─ memory_region_allocate_system_memory() // 创建 pc.ram, pc.rom 并分配内存
+ |           |   ├─ MemoryRegion *ram = g_malloc(sizeof(*ram)); // 创建 pc.ram, pc.rom 并分配内存
+ |           |   ├─ memory_region_allocate_system_memory(ram, NULL, "pc.ram", machine->ram_size); // 创建 pc.ram, pc.rom 并分配内存
  |           |   |   ├─ allocate_system_memory_nonnuma()
  |           |   |   |   |─ memory_region_init_ram_nomigrate()
+ |           |   |   |   |   |─ memory_region_init(mr, owner, name, size);
+ |           |   |   |   |   └─ mr->ram_block = qemu_ram_alloc(size, share, mr, &err); // 仅仅root MR有自己RAMBlock(GPA)
  |           |   |   |   └─ vmstate_register_ram_global() // 将 MR 的 name 写入 RAMBlock 的 idstr
  |           |   |   └─ qemu_ram_alloc()
  |           |   |       └─ qemu_ram_alloc_from_ptr()
