--- Auto-Git Commit ---

--- a/Virtualization/QEMU/3. memory/3. 具体实现机制.md
+++ b/Virtualization/QEMU/3. memory/3. 具体实现机制.md
@@ -402,11 +402,33 @@ void memory_region_init_ram(MemoryRegion *mr,
     //为MemoryRegion分配ram   实际上是block.offset,指的是客户机物理地址空间的偏移即GPA
     mr->ram_addr = qemu_ram_alloc(size, mr);
 }
+
+void memory_region_init_ram_shared_nomigrate(MemoryRegion *mr,
+                                             Object *owner,
+                                             const char *name,
+                                             uint64_t size,
+                                             bool share,
+                                             Error **errp)
+{
+    Error *err = NULL;
+    // 这个mr就是为
+    memory_region_init(mr, owner, name, size);
+    mr->ram = true;
+    mr->terminates = true;
+    mr->destructor = memory_region_destructor_ram;
+    mr->ram_block = qemu_ram_alloc(size, share, mr, &err);
+    mr->dirty_log_mask = tcg_enabled() ? (1 << DIRTY_MEMORY_CODE) : 0;
+    if (err) {
+        mr->size = int128_zero();
+        object_unparent(OBJECT(mr));
+        error_propagate(errp, err);
+    }
+}
 ```
 
 该函数实现很简单，首先调用`memory_region_init`对**MR**做**初始化**。然后进行简单的设置，最重要的还是最后的`qemu_ram_alloc`.
 
-咱们重点看下这个函数，该函数不过是`qemu_ram_alloc_from_ptr`函数的封装，该函数围绕**RAMBlock结构**，在函数起始对**size进行页对齐**，然后**申请一个RAMBlock结构**，之后对其字段进行一些设置如指定MR 和offset，**offset**理论上需要调用`find_ram_offset`在已有的**RAMBlock**中找到一个可用的。但是此时实际上**还没有其他block**，所以这里应该**直接返回0**的。
+咱们重点看下这个函数，该函数围绕**RAMBlock结构**，在函数起始对**size进行页对齐**，然后**申请一个RAMBlock结构**，之后对其字段进行一些设置如指定MR 和offset，**offset**理论上需要调用`find_ram_offset`在已有的**RAMBlock**中找到一个可用的。但是此时实际上**还没有其他block**，所以这里应该**直接返回0**的。
 
 本部分最重要的莫过于**设置其host**了，其对应的**宿主机虚拟地址空间**的**虚拟地址**。在支持**大页**的情况下调用`file_ram_alloc()`函数进行分配，否则调用`phys_mem_alloc()`函数进行分配。二者分配其实都是利用**mmap**分配的，但是在支持大页的情况下需要传递参数`mem_path`,所以需要两个函数。
 
