--- Auto-Git Commit ---

--- a/Virtualization/QEMU/3. memory/3. 具体实现机制.md
+++ b/Virtualization/QEMU/3. memory/3. 具体实现机制.md
@@ -259,8 +259,9 @@ void pc_memory_init(PCMachineState *pcms,
      * aliases to address portions of it, mostly for backwards compatibility
      * with older qemus that used qemu_ram_alloc().
      */
+    /* 分配新的MR */
     ram = g_malloc(sizeof(*ram));
-    /* 根据虚拟机内存大小分配MR */
+    /* 根据虚拟机内存大小初始化MR, 为其分配内存 */
     memory_region_allocate_system_memory(ram, NULL, "pc.ram",
                                          machine->ram_size);
     *ram_memory = ram;
@@ -379,13 +380,15 @@ void pc_memory_init(PCMachineState *pcms,
 
 从总体上来讲，该函数主要完成了三个工作：
 
-1. **分配全局ram**（一整个memory region），
+1. 为pc.ram和pc.rom都生成新的MR, 并**分配全局ram**（一整个memory region）
 
 2. 然后根据`below_4g_mem_size`、`above_4g_mem_size`分别对**ram进行划分**，形成**子MR**，并注册**子MR**到**root MR system_memory 的subregions链表**中。
 
 3. 最后需要调用`memory_region_transaction_commit()`函数提交修改。
 
 ## 分配全局RAM
+
+为虚拟机内存"pc.ram"和"pc.rom"都分别生成了新的MR, 然后分配内存, 这里看"pc.ram"的内存分配, 最终会调用到函数`memory_region_init_ram_shared_nomigrate()`
 
 具体而言，分配**全局ram**由`memory_region_init_ram()`完成，
 
@@ -411,7 +414,7 @@ void memory_region_init_ram_shared_nomigrate(MemoryRegion *mr,
                                              Error **errp)
 {
     Error *err = NULL;
-    // 这个mr就是为
+    // 这个mr就是为系统内存重新分配的
     memory_region_init(mr, owner, name, size);
     mr->ram = true;
     mr->terminates = true;
