--- Auto-Git Commit ---

--- a/Virtualization/QEMU/3. memory/2. 主要结构体分析.md
+++ b/Virtualization/QEMU/3. memory/2. 主要结构体分析.md
@@ -227,7 +227,7 @@ struct RAMBlock {
     struct MemoryRegion *mr;
     uint8_t *host;  // RAMBlock在host上的虚拟内存起始位置, 即HVA
     uint8_t *colo_cache; /* For colo, VM's ram cache */
-    ram_addr_t offset;  // 在vm物理内存中的偏移, GPA
+    ram_addr_t offset;  // 在虚拟机物理内存中的偏移, GPA
     ram_addr_t used_length; //已使用长度
     ram_addr_t max_length;  //最大分配内存
     void (*resized)(const char*, uint64_t length, void *host);
