--- a/Virtualization/QEMU/3. memory/3. 具体实现机制.md
+++ b/Virtualization/QEMU/3. memory/3. 具体实现机制.md
@@ -429,9 +429,57 @@ void memory_region_init_ram_shared_nomigrate(MemoryRegion *mr,
 }
 ```
 
-该函数实现很简单，首先调用`memory_region_init`对**MR**做**初始化**。然后进行简单的设置，最重要的还是最后的`qemu_ram_alloc`.
+该函数实现很简单，首先调用`memory_region_init`对**MR**做**初始化**。然后进行简单的设置，最重要的还是最后的`qemu_ram_alloc`, 最终调用`qemu_ram_alloc_internal()`
 
-咱们重点看下这个函数，该函数围绕**RAMBlock结构**，在函数起始对**size进行页对齐**，然后**申请一个RAMBlock结构**，之后对其字段进行一些设置如指定MR 和offset，**offset**理论上需要调用`find_ram_offset`在已有的**RAMBlock**中找到一个可用的。但是此时实际上**还没有其他block**，所以这里应该**直接返回0**的。
+```cpp
+RAMBlock *qemu_ram_alloc(ram_addr_t size, bool share,
+                         MemoryRegion *mr, Error **errp)
+{
+    return qemu_ram_alloc_internal(size, size, NULL, NULL, false,
+                                   share, mr, errp);
+}
+
+static
+RAMBlock *qemu_ram_alloc_internal(ram_addr_t size, ram_addr_t max_size,
+                                  void (*resized)(const char*,
+                                                  uint64_t length,
+                                                  void *host),
+                                  void *host, bool resizeable, bool share,
+                                  MemoryRegion *mr, Error **errp)
+{
+    RAMBlock *new_block;
+    Error *local_err = NULL;
+
+    size = HOST_PAGE_ALIGN(size);
+    max_size = HOST_PAGE_ALIGN(max_size);
+    new_block = g_malloc0(sizeof(*new_block));
+    new_block->mr = mr;
+    new_block->resized = resized;
+    new_block->used_length = size;
+    new_block->max_length = max_size;
+    assert(max_size >= size);
+    new_block->fd = -1;
+    new_block->page_size = qemu_real_host_page_size;
+    new_block->host = host;
+    if (host) {
+        new_block->flags |= RAM_PREALLOC;
+    }
+    if (resizeable) {
+        new_block->flags |= RAM_RESIZEABLE;
+    }
+    ram_block_add(new_block, &local_err, share);
+    if (local_err) {
+        g_free(new_block);
+        error_propagate(errp, local_err);
+        return NULL;
+    }
+    return new_block;
+}
+
+ram_block_add();
+```
+
+咱们重点看下这个函数，该函数围绕**RAMBlock结构**，在函数起始对**size进行页对齐**，然后**申请一个RAMBlock结构**，之后对其字段进行一些设置如**指定MR** 和offset，**offset**理论上需要调用`find_ram_offset`在已有的**RAMBlock**中找到一个可用的。但是此时实际上**还没有其他block**，所以这里应该**直接返回0**的。
 
 本部分最重要的莫过于**设置其host**了，其对应的**宿主机虚拟地址空间**的**虚拟地址**。在支持**大页**的情况下调用`file_ram_alloc()`函数进行分配，否则调用`phys_mem_alloc()`函数进行分配。二者分配其实都是利用**mmap**分配的，但是在支持大页的情况下需要传递参数`mem_path`,所以需要两个函数。
 
