--- Auto-Git Commit ---

--- a/Virtualization/KVM/2. 模块初始化以及创建虚拟机QEMU/2. QEMU初始化.md
+++ b/Virtualization/KVM/2. 模块初始化以及创建虚拟机QEMU/2. QEMU初始化.md
@@ -159,9 +159,10 @@ int main()
  |           |   |   |   |─ memory_region_init_ram_nomigrate()
  |           |   |   |   |   |─ memory_region_init(mr, owner, name, size);
  |           |   |   |   |   └─ mr->ram_block = qemu_ram_alloc(size, share, mr, &err); // 仅仅root MR有自己RAMBlock(GPA)
+ |           |   |   |   |       └─ qemu_ram_alloc_internal();
+ |           |   |   |   |           |─ memory_region_init(mr, owner, name, size);
+ |           |   |   |   |           └─ ram_block_add();
  |           |   |   |   └─ vmstate_register_ram_global() // 将 MR 的 name 写入 RAMBlock 的 idstr
- |           |   |   └─ qemu_ram_alloc()
- |           |   |       └─ qemu_ram_alloc_from_ptr()
  |           |   |
  |           |   ├─ vmstate_register_ram_global() // 将 MR 的 name 写入 RAMBlock 的 idstr
  |           |   |   └─ vmstate_register_ram()
