--- Auto-Git Commit ---

--- a/Virtualization/KVM/2. 模块初始化以及创建虚拟机QEMU/2. QEMU初始化.md
+++ b/Virtualization/KVM/2. 模块初始化以及创建虚拟机QEMU/2. QEMU初始化.md
@@ -162,6 +162,7 @@ int main()
  |           |   |   |   |       └─ qemu_ram_alloc_internal();
  |           |   |   |   |           |─ RAMBlock = g_malloc0(sizeof(*new_block)); // 创建RAMBlock并且初始化
  |           |   |   |   |           └─ ram_block_add(); // 
+ |           |   |   |   |               |─ new_block->offset = find_ram_offset(new_block->max_length); // 创建RAMBlock并且初始化
  |           |   |   |   └─ vmstate_register_ram_global() // 将 MR 的 name 写入 RAMBlock 的 idstr
  |           |   |
  |           |   ├─ vmstate_register_ram_global() // 将 MR 的 name 写入 RAMBlock 的 idstr
