--- Auto-Git Commit ---

--- a/Virtualization/KVM/2. 模块初始化以及创建虚拟机QEMU/2. QEMU初始化.md
+++ b/Virtualization/KVM/2. 模块初始化以及创建虚拟机QEMU/2. QEMU初始化.md
@@ -757,7 +757,7 @@ kvm\_init\_vcpu就是**获取了vcpu**，将**相关内容填充了env**。
 
 **内存初始化**函数是**pc\_memory\_init**, **memory\_region\_init\_ram**传入了**高端内存**和**低端内存**的值，memory\_region\_init负责**填充mr**，重点在**qemu\_ram\_alloc**，即**qemu\_ram\_alloc\_from\_ptr**，首先有**RAMBlock**，ram\_list，那就直接借助find\_ram\_offset函数一起看一下qemu的内存分布模型。
 
-![config](./images/6.png)
+![2020-02-29-18-40-20.png](./images/2020-02-29-18-40-20.png)
 
 qemu模拟了**普通内存分布模型**，内存的线性也是**分块被使用**的，每个块称为**RAMBlock**，由ram\_list统领，RAMBlock.offset则是区块的线性地址，即相对于开始的偏移位，RAMBlock.length(size)则是区块的大小，find\_ram\_offset则是在线性区间内找到没有使用的一段空间，可以完全容纳新申请的ramblock length大小，代码就是进行了所有区块的遍历，找到满足新申请length的最小区间，把ramblock安插进去即可，返回的offset即是新分配区间的开始地址。
 
