--- Auto-Git Commit ---

--- a/Virtualization/QEMU/3. memory/2. 主要结构体分析.md
+++ b/Virtualization/QEMU/3. memory/2. 主要结构体分析.md
@@ -259,6 +259,12 @@ struct RAMBlock {
 
 然而**ram\_addr\_t命名空间**并**不等同**于**guest物理内存空间！！！**，它仅表示**所有RAMBlock集合**构成的**一个地址空间**。
 
+qemu内存分布模型
+
+![2020-02-29-18-53-41.png](./images/2020-02-29-18-53-41.png)
+
+qemu模拟了**普通内存分布模型**，内存的线性也是**分块被使用**的，**每个块**称为`RAMBlock`，由`ram_list`统领，**RAMBlock.offset**则是**区块的线性地址**，即**相对于开始的偏移位**，`RAMBlock.length(size)`则是区块的大小.
+
 ### 2.3.1. RAMList全局链表
 
 这个全局链表描述了整个虚拟机使用的真正的**所有主机虚拟内存**.
