--- Auto-Git Commit ---

--- a/Virtualization/QEMU/3. memory/3. 具体实现机制.md
+++ b/Virtualization/QEMU/3. memory/3. 具体实现机制.md
@@ -560,7 +560,7 @@ static void ram_block_add(RAMBlock *new_block, Error **errp, bool shared)
 
 ![2020-02-29-18-57-01.png](./images/2020-02-29-18-57-01.png)
 
-上图是qemu模拟的普通内存分布模型, 内存的线性也是分块被使用的，每个块称为RAMBlock，由ram_list统领，RAMBlock.offset则是区块的线性地址，即相对于开始的偏移位，RAMBlock.length(size)则是区块的大小. `find_ram_offset`函数则是在**线性区间内**找到**没有使用的一段空间**，可以完全容纳**新申请的ramblock length大小**，代码就是进行了所有区块的遍历，找到满足新申请length的最小区间，把ramblock安插进去即可，返回的offset即是新分配区间的开始地址。
+上图是qemu模拟的普通内存分布模型, 内存的线性也是分块被使用的，每个块称为RAMBlock，由ram_list统领，RAMBlock.offset则是区块的线性地址，即相对于开始的偏移位，RAMBlock.length(size)则是区块的大小. `find_ram_offset`函数则是在**线性区间内**找到**没有使用的一段空间**，可以完全容纳**新申请的ramblock length大小**，代码就是进行了所有区块的遍历(全局链表`ram_list`)，找到满足新申请length的最小区间，把ramblock安插进去即可，返回的offset即是新分配区间的开始地址。
 
 本部分最重要的莫过于**设置其host**了，其对应的**宿主机虚拟地址空间**的**虚拟地址**。在支持**大页**的情况下调用`file_ram_alloc()`函数进行分配，否则调用`phys_mem_alloc()`函数进行分配。二者分配其实都是利用**mmap**分配的，但是在支持大页的情况下需要传递参数`mem_path`,所以需要两个函数。
 
