--- a/Virtualization/KVM/2. 模块初始化以及创建虚拟机QEMU/2. QEMU初始化.md
+++ b/Virtualization/KVM/2. 模块初始化以及创建虚拟机QEMU/2. QEMU初始化.md
@@ -163,7 +163,8 @@ int main()
  |           |   |   |   |           |─ RAMBlock = g_malloc0(sizeof(*new_block)); // 创建RAMBlock并且初始化
  |           |   |   |   |           └─ ram_block_add(); // 
  |           |   |   |   |               |─ new_block->offset = find_ram_offset(new_block->max_length); // 遍历全局ram_list所有区块, 找到满足长度的空间, 并将ramblock安插进去
- |           |   |   |   |               |─ new_block->host = phys_mem_alloc(new_block->max_length, &new_block->mr->align, shared); // 
+ |           |   |   |   |               |─ new_block->host = phys_mem_alloc(new_block->max_length, &new_block->mr->align, shared); // 在host上分配虚拟内存
+ |           |   |   |   |               |─ memory_try_enable_merging(new_block->host, new_block->max_length); // 
  |           |   |   |   └─ vmstate_register_ram_global() // 将 MR 的 name 写入 RAMBlock 的 idstr
  |           |   |
  |           |   ├─ vmstate_register_ram_global() // 将 MR 的 name 写入 RAMBlock 的 idstr
