--- a/Virtualization/QEMU/3. memory/3. 具体实现机制.md
+++ b/Virtualization/QEMU/3. memory/3. 具体实现机制.md
@@ -509,7 +509,7 @@ static void ram_block_add(RAMBlock *new_block, Error **errp, bool shared)
                 qemu_mutex_unlock_ramlist();
                 return;
             }
-            // 与相邻的block
+            // 与相邻的block合并
             memory_try_enable_merging(new_block->host, new_block->max_length);
         }
     }
