--- Auto-Git Commit ---

--- a/Virtualization/QEMU/3. memory/3. 具体实现机制.md
+++ b/Virtualization/QEMU/3. memory/3. 具体实现机制.md
@@ -388,24 +388,15 @@ void pc_memory_init(PCMachineState *pcms,
 
 ## 分配全局RAM
 
-为虚拟机内存"pc.ram"和"pc.rom"都分别生成了新的MR, 然后分配内存, 这里看"pc.ram"的内存分配, 最终会调用到函数`memory_region_init_ram_shared_nomigrate()`
+为虚拟机内存"pc.ram"和"pc.rom"都分别生成了新的MR, 然后分配内存, 这里看"pc.ram"的内存分配`memory_region_allocate_system_memory(ram, NULL, "pc.ram", machine->ram_size);`, 对于非大页最终会调用到函数`memory_region_init_ram_shared_nomigrate()`
 
-具体而言，分配**全局ram**由`memory_region_init_ram()`完成，
+```
+allocate_system_memory_
+    memory_region_init_ram_shared_nomigrate()
+    vmstate_register_ram_global
+```
 
 ```cpp
-void memory_region_init_ram(MemoryRegion *mr,
-                            Object *owner,
-                            const char *name,
-                            uint64_t size)
-{
-    memory_region_init(mr, owner, name, size);
-    mr->ram = true;
-    mr->terminates = true;
-    mr->destructor = memory_region_destructor_ram;
-    //为MemoryRegion分配ram   实际上是block.offset,指的是客户机物理地址空间的偏移即GPA
-    mr->ram_addr = qemu_ram_alloc(size, mr);
-}
-
 void memory_region_init_ram_shared_nomigrate(MemoryRegion *mr,
                                              Object *owner,
                                              const char *name,
@@ -467,6 +458,7 @@ RAMBlock *qemu_ram_alloc_internal(ram_addr_t size, ram_addr_t max_size,
     if (resizeable) {
         new_block->flags |= RAM_RESIZEABLE;
     }
+    // 添加该ramblock
     ram_block_add(new_block, &local_err, share);
     if (local_err) {
         g_free(new_block);
