--- Auto-Git Commit ---

--- a/Virtualization/QEMU/3. memory/2. 主要结构体分析.md
+++ b/Virtualization/QEMU/3. memory/2. 主要结构体分析.md
@@ -12,7 +12,7 @@
     - [2.2.1. 树结构? 其实只有一个root](#221-树结构-其实只有一个root)
     - [2.2.2. 子区域与子区域链表](#222-子区域与子区域链表)
     - [2.2.3. MemoryRegion与RAMBlock](#223-memoryregion与ramblock)
-  - [2.3. RAMBlock: 主机一段虚拟内存HVA](#23-ramblock-主机一段虚拟内存hva)
+  - [2.3. RAMBlock: 虚拟机物理内存GPA与主机一段虚拟内存HVA](#23-ramblock-虚拟机物理内存gpa与主机一段虚拟内存hva)
     - [2.3.1. RAMList全局链表](#231-ramlist全局链表)
   - [2.4. Address, MemoryRegion, RAMBlock关系](#24-address-memoryregion-ramblock关系)
   - [2.5. FlatView: 虚拟机物理地址空间](#25-flatview-虚拟机物理地址空间)
@@ -216,7 +216,7 @@ MemoryRegion直接操作内存，**每一棵MR树的树根**对应一个**RAMBlo
 
 其`RAMBlock->offset`是该MR在**虚拟机的物理内存中的偏移**, RAMBlock最直接的接触host的内存，看下其结构
 
-## 2.3. RAMBlock: 主机一段虚拟内存HVA
+## 2.3. RAMBlock: 虚拟机物理内存GPA与主机一段虚拟内存HVA
 
 ```cpp
 // include/exec/ram_addr.h
