--- a/Virtualization/QEMU/3. memory/3. 具体实现机制.md
+++ b/Virtualization/QEMU/3. memory/3. 具体实现机制.md
@@ -8,6 +8,8 @@
 - [全局的系统AS和MR的初始化: 不分配GPA/HVA](#全局的系统as和mr的初始化-不分配gpahva)
 - [实际内存的分配GPA/HVA](#实际内存的分配gpahva)
   - [分配全局RAM](#分配全局ram)
+    - [memory_region_init_ram: ramblock从host上分配虚拟内存](#memory_region_init_ram-ramblock从host上分配虚拟内存)
+    - [vmstate_register_ram_global(): ramblock与mr关联](#vmstate_register_ram_global-ramblock与mr关联)
   - [划分为两个子MR](#划分为两个子mr)
 - [](#)
 - [参考](#参考)
@@ -390,11 +392,13 @@ void pc_memory_init(PCMachineState *pcms,
 
 为虚拟机内存"pc.ram"和"pc.rom"都分别生成了新的MR, 然后分配内存, 这里看"pc.ram"的内存分配`memory_region_allocate_system_memory(ram, NULL, "pc.ram", machine->ram_size);`, 对于非大页最终会调用到函数`memory_region_init_ram_shared_nomigrate()`
 
+```cpp
+allocate_system_memory_nonuma()
+    |- memory_region_init_ram_shared_nomigrate()
+    └- vmstate_register_ram_global();
 ```
-allocate_system_memory_
-    memory_region_init_ram_shared_nomigrate()
-    vmstate_register_ram_global
-```
+
+### memory_region_init_ram: ramblock从host上分配虚拟内存
 
 ```cpp
 void memory_region_init_ram_shared_nomigrate(MemoryRegion *mr,
@@ -405,7 +409,7 @@ void memory_region_init_ram_shared_nomigrate(MemoryRegion *mr,
                                              Error **errp)
 {
     Error *err = NULL;
-    // 这个mr就是为系统内存重新分配的
+    // 这个mr就是为系统内存重新分配的, 这里只是初始化
     memory_region_init(mr, owner, name, size);
     mr->ram = true;
     mr->terminates = true;
@@ -558,6 +562,11 @@ static void ram_block_add(RAMBlock *new_block, Error **errp, bool shared)
 本部分最重要的莫过于**设置其host**了，其对应的**宿主机虚拟地址空间**的**虚拟地址**。在支持**大页**的情况下调用`file_ram_alloc()`函数进行分配，否则调用`phys_mem_alloc()`函数进行分配。二者分配其实都是利用**mmap**分配的，但是在支持大页的情况下需要传递参数`mem_path`,所以需要两个函数。
 
 在**非大页**的情况下，分配好内存尝试**和相邻的block合并**下。最后把block插入到全局的链表`ram_list`中，只是block保持**从大到小**的顺序。
+
+### vmstate_register_ram_global(): ramblock与mr关联
+
+vmstate_register_ram_global这个函数则是负责将前面提到的ramlist中的ramblock和memory region的初始地址对应一下，将mr->name填充到ramblock的idstr里面，就是让二者有确定的对应关系，如此mr就有了物理内存使用。
+
 
 ## 划分为两个子MR
 
