--- Auto-Git Commit ---

--- a/Virtualization/QEMU/3. memory/3. 具体实现机制.md
+++ b/Virtualization/QEMU/3. memory/3. 具体实现机制.md
@@ -8,7 +8,7 @@
 - [全局的系统AS和MR的初始化: 不分配GPA/HVA](#全局的系统as和mr的初始化-不分配gpahva)
 - [实际内存的分配GPA/HVA](#实际内存的分配gpahva)
   - [分配全局RAM](#分配全局ram)
-    - [memory_region_init_ram: ramblock从host上分配虚拟内存](#memory_region_init_ram-ramblock从host上分配虚拟内存)
+    - [memory_region_init_ram: 创建ramblock并从host上分配虚拟内存](#memory_region_init_ram-创建ramblock并从host上分配虚拟内存)
     - [vmstate_register_ram_global(): ramblock与mr关联](#vmstate_register_ram_global-ramblock与mr关联)
   - [划分为两个子MR](#划分为两个子mr)
 - [](#)
@@ -398,7 +398,7 @@ allocate_system_memory_nonuma()
     └- vmstate_register_ram_global();
 ```
 
-### memory_region_init_ram: ramblock从host上分配虚拟内存
+### memory_region_init_ram: 创建ramblock并从host上分配虚拟内存
 
 ```cpp
 void memory_region_init_ram_shared_nomigrate(MemoryRegion *mr,
@@ -565,7 +565,21 @@ static void ram_block_add(RAMBlock *new_block, Error **errp, bool shared)
 
 ### vmstate_register_ram_global(): ramblock与mr关联
 
-vmstate_register_ram_global这个函数则是负责将前面提到的ramlist中的ramblock和memory region的初始地址对应一下，将mr->name填充到ramblock的idstr里面，就是让二者有确定的对应关系，如此mr就有了物理内存使用。
+```cpp
+void vmstate_register_ram_global(MemoryRegion *mr)
+{
+    vmstate_register_ram(mr, NULL);
+}
+
+void vmstate_register_ram(MemoryRegion *mr, DeviceState *dev)
+{
+    qemu_ram_set_idstr(mr->ram_block,
+                       memory_region_name(mr), dev);
+    qemu_ram_set_migratable(mr->ram_block);
+}
+```
+
+`vmstate_register_ram_global`这个函数则是负责将前面提到的ramlist中的**ramblock**和**memory region**的初始地址对应一下，将mr->name填充到ramblock的idstr里面，就是让二者有确定的对应关系，如此mr就有了物理内存使用。
 
 
 ## 划分为两个子MR
